<resources>
    <string name="app_name">Tracking issues</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="logo_desc">App logo</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>


    <string name="updateLocation">Mark My Start Position</string>
    <string name="Id">"ID : "</string>
    <string name="name">"ชื่อ : "</string>
    <string name="Des">"อธิบาย : "</string>
    <string name="user">"UserID : "</string>
    <string name="title_activity_detail">DetailActivity</string>


    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>


    <string name="issue_name">ปัญหา:</string>
    <string name="issue_hint_name">ชื่อปัญหา</string>
    <string name="issue_deadline">วันสิ้นสุด:</string>
    <string name="issue_hint_deadline">วันสิ้นสุด</string>
    <string name="issue_description">รายละเอียด:</string>
    <string name="issue_hint_description">รายละเอียดปัญหา</string>
    <string name="issue_location">ตำแหน่ง:</string>
    <string name="issue_hint_location">ตำแหน่ง</string>
    <string name="btn_reject">ยกเลิก</string>
    <string name="btn_accept">ยอมรับ</string>
</resources>
